software, api: Apply model changes
